--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@xinhua/snapdom",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "snapDOM captures HTML elements to images with exceptional speed and accuracy.",
   "main": "dist/snapdom.js",
-  "module": "src/index.js",
+  "module": "dist/snapdom.min.mjs",
   "scripts": {
     "test": "npx vitest run --browser.headless --reporter=verbose",
     "test:benchmark": "npx vitest bench --browser.headless --watch=false",
